[gd_scene load_steps=13 format=3 uid="uid://dnhtch882ba3p"]

[ext_resource type="Texture2D" uid="uid://de7buucjfqugo" path="res://assets/places/OFFICE.png" id="1_7uya8"]
[ext_resource type="Script" path="res://scenes/maps/office.gd" id="1_og71x"]
[ext_resource type="Texture2D" uid="uid://bylt4scf7w5ka" path="res://assets/places/desk.png" id="2_bcrdj"]
[ext_resource type="PackedScene" uid="uid://plq0xuq5ke1w" path="res://scenes/player/player.tscn" id="2_st0jw"]
[ext_resource type="PackedScene" uid="uid://y5uwtfh0pcgn" path="res://scenes/npc/ratzwel.tscn" id="5_ayj8r"]
[ext_resource type="Texture2D" uid="uid://coo373phjcv48" path="res://assets/ui/button.png" id="6_mnh1b"]
[ext_resource type="PackedScene" uid="uid://c038ktvy5nic6" path="res://script/decision_manager.tscn" id="7_dl7m5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_apwtu"]
radius = 26.0192

[sub_resource type="Theme" id="Theme_r83te"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rjn33"]
texture = ExtResource("6_mnh1b")
modulate_color = Color(0.601223, 0.601223, 0.601223, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_enqx5"]
texture = ExtResource("6_mnh1b")
modulate_color = Color(1, 0.508591, 0.0257265, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eelni"]
texture = ExtResource("6_mnh1b")

[node name="Office" type="Node2D"]
script = ExtResource("1_og71x")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -428.0
offset_top = -270.0
offset_right = 397.0
offset_bottom = 251.0
color = Color(0, 0, 0, 1)

[node name="Office" type="Sprite2D" parent="."]
visible = false
position = Vector2(5, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_7uya8")

[node name="Desk" type="Sprite2D" parent="."]
visible = false
position = Vector2(5, -2)
texture = ExtResource("2_bcrdj")

[node name="Player" parent="." instance=ExtResource("2_st0jw")]
position = Vector2(-1, 70)

[node name="Ratzwel" parent="." instance=ExtResource("5_ayj8r")]

[node name="AreaAnswers" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAnswers"]
shape = SubResource("CircleShape2D_apwtu")

[node name="btn_talk" type="Button" parent="AreaAnswers"]
visible = false
offset_left = -21.0
offset_top = -37.0
offset_right = 21.0
offset_bottom = -17.0
theme = SubResource("Theme_r83te")
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_rjn33")
theme_override_styles/pressed = SubResource("StyleBoxTexture_enqx5")
theme_override_styles/normal = SubResource("StyleBoxTexture_eelni")
text = "btn_talk"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DecisionLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DecisionManager" parent="." instance=ExtResource("7_dl7m5")]

[connection signal="body_entered" from="AreaAnswers" to="." method="_on_area_answers_body_entered"]
[connection signal="body_exited" from="AreaAnswers" to="." method="_on_area_answers_body_exited"]
[connection signal="pressed" from="AreaAnswers/btn_talk" to="." method="_on_btn_talk_pressed"]
